# artisatomic

./: .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  README.md  generateartisatomicdatafilesfromnaharonly.py  generateartisatomicdatafileshilliernahar.py  makeartisatomicfiles.py  makerecombratefile.py  manual_matches.py  processhilliernahar.py  pyproject.toml  readhillierdata.py  readnahardata.py  readqubdata.py  recombinationrateintegralsnahar.py  requirements.txt  setup.py  test_artisatomic.py  tests.py  upsilon-data.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: linters.yml  pythonapp.yml  test.yml
artisatomic/: __init__.py  atomic_properties.txt  cFACReader.py  converttopythonrt.py  download_gammaspec_betaminus_alpha.py  groundstatesonlynist.py  makenucleardecayfile.py  makerecombratefile.py  manual_matches.py  migrateoldatomicdata.py  nist_ionization.txt  readHedata.py  readboyledata.py  readcarsusdata.py  readdreamdata.py  readfacdata.py  readfloers25data.py  readhillierdata.py  readkuruczdata.py  readlisbondata.py  readmonsdata.py  readnahardata.py  readqubdata.py  readtanakajpltdata.py  recombinationrateintegralsnahar.py  test_artisatomic.py  updatehalflives.py
artisatomic/tests/jplt/: artisatomicionhandlers.json
atomic-data-He/: README.txt
atomic-data-dream/: README.md
atomic-data-floers25/: .gitignore  GSI_lanthanides_calibrated_levels.zip.md5  GSI_lanthanides_calibrated_transitions.zip.md5  readme.txt  setup_floers25_data.sh  testdata.tar.xz  url.txt
atomic-data-hillier/: .gitignore  README.md  atomic_data_15nov16.tar.gz.md5  atomic_data_15nov16.tar.xz.md5  atomic_data_21jun23.tar.xz.md5  raw_subphot.f  setup_cmfgen_data.sh
atomic-data-hillier/atomic_diff/ARG/I/9sep11/: fin_osc_ljs
atomic-data-hillier/atomic_diff/FE/I/07sep16/: col_data_ljs
atomic-data-kurucz/: .gitignore  url.txt
atomic-data-kurucz/extendedatoms/: url.txt
atomic-data-kurucz/test_sample/extendedatoms/: gf3801.lines.zst
atomic-data-kurucz/test_sample/zztar/: gf3800.all.zst  gf3801.all.zst  gf3900.all.zst  gf3901.all.zst
atomic-data-mons/: .gitignore  url-lanthanidesV-VII.txt
atomic-data-nahar/: README.md  all.md5  download-nahar.py
atomic-data-qub/: .dropbox  .gitattributes  .gitignore  README.txt  log  photo_input
atomic-data-storey/: storetetal2016-co-ii.txt
atomic-data-tanaka-jplt/: .gitignore  data_v1.1.tar.gz.md5  data_v2.0.tar.gz.md5  grasp_v2.1.tar.gz.md5  readme.txt  readme_v1.1.txt  readme_v2.1.txt  setup_jplt_data.sh  url.txt
atomic-data-tiptopbase/: fe_ii_upsilon-data-T4.txt  fe_ii_upsilon-data.txt  fe_iii_upsilon-data.txt
recombination_rates/: NaharFe recombination.xlsx  NaharFe2 core state matching.xlsx  recombinationrateintegralnahar.py  recombinationrateintegrals.py  recombinationrates.py
recombination_rates/recombinationartisoutput/: recombinationartisoutput-Oct2016.txt  recombinationartisoutput-naharptpx.old.txt  recombinationartisoutput-naharpx-togsonly.txt  recombinationartisoutput-naharpx_gsoldcode.txt  recombinationartisoutput-naharpxnaharlevels.txt  recombinationartisoutput-naharpxnaharlevelsgsonly.txt  recombinationartisoutput.txt  recombinationartisoutput_hilliernaharcombined.txt  recombinationartisoutput_normalmintemp.txt  recombinationartisoutputold.txt  recombinationdatanahar96feiii.txt  recombinationdatanahar97fei.txt  recombinationdatanahar97feii.txt  recombinationdatanahar98feiv.txt
tests/cmfgen/: artisatomicionhandlers.json  checksums.txt
tests/floers25/: artisatomicionhandlers.json  checksums.txt
tests/jplt/: artisatomicionhandlers.json  checksums.txt
tests/kurucz/: artisatomicionhandlers.json  checksums.txt
tests/qub/: artisatomicionhandlers.json  checksums.txt
